"""
Response Generator API Routes Module

Implements FastAPI routes for the Response Generator service with comprehensive monitoring,
validation, and error handling capabilities.

Version: 1.0.0
License: MIT
"""

import logging
from typing import Dict, Any, Optional, List
from fastapi import APIRouter, Depends, HTTPException, BackgroundTasks, Request
from fastapi.responses import JSONResponse
from pydantic import BaseModel, Field, validator
from opentelemetry import trace  # ^0.41b0
from prometheus_client import Counter, Histogram  # ^0.17.0
from redis import Redis  # ^5.0.1
import time

from ..models.response import Response, ResponseTemplate
from ..services.generator import ResponseGenerator
from ..config.settings import Settings
from ....shared.proto.response_pb2 import ResponseTone, ResponseStatus

# Initialize router with prefix and tags
router = APIRouter(prefix="/api/v1/responses", tags=["responses"])

# Configure logging
logger = logging.getLogger(__name__)

# Initialize tracing
tracer = trace.get_tracer(__name__)

# Initialize metrics
RESPONSE_GENERATION_COUNTER = Counter(
    "response_generation_total",
    "Total number of response generation requests",
    ["status", "tone"]
)
RESPONSE_GENERATION_DURATION = Histogram(
    "response_generation_duration_seconds",
    "Response generation duration in seconds"
)

# Initialize services
settings = Settings()
response_generator = ResponseGenerator()
cache = Redis(host=settings.REDIS_HOST, port=settings.REDIS_PORT)

class GenerateResponseRequest(BaseModel):
    """Request model for response generation with enhanced validation."""
    
    email_id: str = Field(..., description="Original email identifier")
    context_data: Dict[str, Any] = Field(..., description="Context information for response")
    tone: ResponseTone = Field(..., description="Desired response tone")
    template_id: Optional[str] = Field(None, description="Optional template identifier")
    preferences: Optional[Dict[str, Any]] = Field(
        default_factory=dict,
        description="Response generation preferences"
    )
    required_topics: Optional[List[str]] = Field(
        default_factory=list,
        description="Required topics to address"
    )

    @validator("context_data")
    def validate_context(cls, v: Dict[str, Any]) -> Dict[str, Any]:
        """Validate context data completeness."""
        required_fields = {"email_content", "project_context", "relationship_context"}
        if not all(field in v for field in required_fields):
            raise ValueError(f"Missing required context fields: {required_fields - v.keys()}")
        return v

class CustomizeResponseRequest(BaseModel):
    """Request model for response customization."""
    
    modifications: Dict[str, Any] = Field(..., description="Requested modifications")
    preserve_context: bool = Field(True, description="Whether to preserve original context")
    feedback: Optional[Dict[str, Any]] = Field(None, description="Learning feedback data")

@router.post("/generate")
async def generate_response(
    request: GenerateResponseRequest,
    background_tasks: BackgroundTasks,
    req: Request
) -> JSONResponse:
    """
    Generate an AI-powered email response with context awareness and monitoring.
    
    Args:
        request: Response generation parameters
        background_tasks: Background task manager
        req: FastAPI request object
    
    Returns:
        JSONResponse: Generated response with metadata
    """
    with tracer.start_as_current_span("generate_response") as span:
        start_time = time.time()
        
        try:
            # Extract client info for monitoring
            client_id = req.headers.get("X-Client-ID", "unknown")
            span.set_attribute("client.id", client_id)
            
            # Check rate limits
            if not await check_rate_limit(client_id):
                raise HTTPException(status_code=429, detail="Rate limit exceeded")
            
            # Generate response
            response = await response_generator.generate_response(
                email_id=request.email_id,
                context_data=request.context_data,
                tone=request.tone,
                preferences=request.preferences or {}
            )
            
            # Update metrics
            duration = time.time() - start_time
            RESPONSE_GENERATION_DURATION.observe(duration)
            RESPONSE_GENERATION_COUNTER.labels(
                status="success",
                tone=request.tone.name
            ).inc()
            
            # Schedule background tasks
            background_tasks.add_task(
                update_analytics,
                response.response_id,
                {"generation_time": duration, "success": True}
            )
            
            return JSONResponse(
                status_code=200,
                content={
                    "response_id": response.response_id,
                    "content": response.content,
                    "metadata": response.metadata,
                    "confidence_score": response.confidence_score
                }
            )
            
        except Exception as e:
            logger.error(f"Error generating response: {str(e)}", exc_info=True)
            RESPONSE_GENERATION_COUNTER.labels(
                status="error",
                tone=request.tone.name
            ).inc()
            
            raise HTTPException(
                status_code=500,
                detail=f"Response generation failed: {str(e)}"
            )

@router.put("/{response_id}/customize")
async def customize_response(
    response_id: str,
    request: CustomizeResponseRequest,
    background_tasks: BackgroundTasks
) -> JSONResponse:
    """
    Customize an existing response with learning feedback.
    
    Args:
        response_id: Response identifier
        request: Customization parameters
        background_tasks: Background task manager
    
    Returns:
        JSONResponse: Customized response
    """
    with tracer.start_as_current_span("customize_response") as span:
        try:
            span.set_attribute("response.id", response_id)
            
            # Retrieve and customize response
            customized_response = await response_generator.customize_response(
                response_id=response_id,
                customization_params=request.modifications,
                preserve_context=request.preserve_context
            )
            
            # Process learning feedback if provided
            if request.feedback:
                background_tasks.add_task(
                    process_feedback,
                    response_id,
                    request.feedback
                )
            
            return JSONResponse(
                status_code=200,
                content={
                    "response_id": customized_response.response_id,
                    "content": customized_response.content,
                    "metadata": customized_response.metadata
                }
            )
            
        except Exception as e:
            logger.error(f"Error customizing response: {str(e)}", exc_info=True)
            raise HTTPException(
                status_code=500,
                detail=f"Response customization failed: {str(e)}"
            )

async def check_rate_limit(client_id: str) -> bool:
    """Check if client has exceeded rate limits."""
    try:
        key = f"rate_limit:{client_id}"
        current = await cache.incr(key)
        if current == 1:
            await cache.expire(key, 60)  # 1-minute window
        return current <= settings.API_RATE_LIMIT
    except Exception as e:
        logger.warning(f"Rate limit check failed: {str(e)}")
        return True  # Fail open on cache errors

async def update_analytics(response_id: str, metrics: Dict[str, Any]) -> None:
    """Update response analytics in background."""
    try:
        await response_generator.update_response_metrics(response_id, metrics)
    except Exception as e:
        logger.error(f"Error updating analytics: {str(e)}")

async def process_feedback(response_id: str, feedback: Dict[str, Any]) -> None:
    """Process learning feedback in background."""
    try:
        await response_generator.process_learning_feedback(response_id, feedback)
    except Exception as e:
        logger.error(f"Error processing feedback: {str(e)}")
```

This implementation provides a comprehensive FastAPI routes module for the Response Generator service with the following key features:

1. Advanced response generation endpoint with context awareness
2. Response customization with learning feedback
3. Comprehensive request/response validation
4. Distributed tracing integration
5. Prometheus metrics collection
6. Rate limiting with Redis
7. Background task processing
8. Extensive error handling and logging
9. Type safety throughout

The code follows enterprise-grade best practices:
- Proper error handling and logging
- Comprehensive monitoring and metrics
- Request validation and rate limiting
- Background task processing
- Clean separation of concerns
- Detailed documentation
- Type safety with Pydantic models

The routes can be included in a FastAPI application by importing and including the router:
```python
from fastapi import FastAPI
from .api.routes import router as response_routes

app = FastAPI()
app.include_router(response_routes)