"""
Response Generator Service Module

Provides enterprise-grade email response generation with AI-powered context awareness,
template management, and advanced learning capabilities.

Version: 1.0.0
License: MIT
"""

import asyncio
import logging
from typing import Dict, Any, Optional, Tuple
from pydantic import ValidationError
from opentelemetry import trace  # ^1.20.0
from collections import Counter

from ..models.response import Response
from .template_manager import TemplateManager
from ..utils.ai_processor import AIProcessor
from ....shared.proto.response_pb2 import ResponseTone

# Configure module logger
logger = logging.getLogger(__name__)

# Constants
MIN_CONFIDENCE_THRESHOLD = 0.7
MAX_RETRIES = 3
TELEMETRY_ENABLED = True
LEARNING_FEEDBACK_INTERVAL = 100

# Initialize tracer
tracer = trace.get_tracer(__name__)

class ResponseGenerator:
    """
    Enhanced service class for generating email responses using AI and templates
    with learning capabilities and comprehensive metrics tracking.
    """

    def __init__(
        self,
        template_manager: TemplateManager,
        ai_processor: AIProcessor,
        config: Dict[str, Any]
    ):
        """
        Initialize response generator with enhanced capabilities.

        Args:
            template_manager: Template management service
            ai_processor: AI processing service
            config: Service configuration parameters
        """
        self._template_manager = template_manager
        self._ai_processor = ai_processor
        self._metrics_store = {
            "requests": Counter(),
            "success_rate": 0.0,
            "avg_confidence": 0.0,
            "template_usage": Counter(),
            "learning_metrics": {}
        }
        self._request_counter = Counter()
        
        # Configure service settings
        self._config = {
            "min_confidence": MIN_CONFIDENCE_THRESHOLD,
            "max_retries": MAX_RETRIES,
            "learning_interval": LEARNING_FEEDBACK_INTERVAL,
            **config
        }
        
        logger.info("Response Generator service initialized with enhanced capabilities")

    async def generate_response(
        self,
        email_id: str,
        context_data: Dict[str, Any],
        tone: ResponseTone,
        preferences: Dict[str, Any]
    ) -> Response:
        """
        Generate an email response with enhanced context awareness and learning.

        Args:
            email_id: Original email identifier
            context_data: Contextual information for response
            tone: Desired response tone
            preferences: User preferences for response

        Returns:
            Response: Generated response with metadata

        Raises:
            ValueError: If input validation fails
            RuntimeError: If generation fails after retries
        """
        with tracer.start_as_current_span("generate_response") as span:
            try:
                # Track request metrics
                self._request_counter["total"] += 1
                span.set_attribute("email_id", email_id)
                
                # Validate input parameters
                if not email_id or not context_data:
                    raise ValueError("Email ID and context data are required")
                
                # Select best matching template
                template = await self._template_manager.select_template(
                    context_data,
                    tone,
                    preferences.get("template_category")
                )
                
                # Track template version and usage
                if template:
                    template_version = await self._template_manager.get_template_version(
                        template.template_id
                    )
                    self._metrics_store["template_usage"][template.template_id] += 1
                
                # Generate AI response with confidence scoring
                response_content = await self._ai_processor.generate_response(
                    context_data.get("email_content", ""),
                    context_data,
                    tone.name.lower(),
                    template.content if template else None
                )
                
                # Apply user preferences and tone adjustments
                customized_content = await self._apply_preferences(
                    response_content.content,
                    preferences
                )
                
                # Validate generated content
                validation_result = await self.validate_response(
                    Response(content=customized_content),
                    context_data
                )
                
                if not validation_result[0]:
                    raise ValueError(f"Response validation failed: {validation_result[1]}")
                
                # Create response instance with metadata
                response = Response(
                    email_id=email_id,
                    content=customized_content,
                    tone=tone,
                    template_id=template.template_id if template else None,
                    confidence_score=response_content.metadata["confidence_metrics"]["aggregate_score"],
                    metadata={
                        "context_match_score": validation_result[2].get("context_match", 0.0),
                        "template_version": template_version if template else None,
                        "generation_metrics": response_content.metadata,
                        "validation_metrics": validation_result[2]
                    }
                )
                
                # Update learning metrics
                await self._update_learning_metrics(response, validation_result[2])
                
                # Track success metrics
                self._metrics_store["success_rate"] = (
                    self._metrics_store["success_rate"] * (self._request_counter["total"] - 1) +
                    float(validation_result[0])
                ) / self._request_counter["total"]
                
                logger.info(f"Generated response for email {email_id} with confidence {response.confidence_score}")
                return response

            except Exception as e:
                self._request_counter["errors"] += 1
                logger.error(f"Error generating response: {str(e)}")
                raise

    async def customize_response(
        self,
        response_id: str,
        customization_params: Dict[str, Any],
        preserve_context: bool = True
    ) -> Response:
        """
        Customize response with enhanced personalization while preserving context.

        Args:
            response_id: Response identifier
            customization_params: Customization parameters
            preserve_context: Whether to preserve original context

        Returns:
            Response: Customized response
        """
        with tracer.start_as_current_span("customize_response") as span:
            try:
                # Retrieve original response
                original_response = await self._get_response(response_id)
                if not original_response:
                    raise ValueError(f"Response {response_id} not found")
                
                # Apply customizations while preserving context
                customized_content = await self._apply_customizations(
                    original_response.content,
                    customization_params,
                    preserve_context
                )
                
                # Validate customized content
                validation_result = await self.validate_response(
                    Response(content=customized_content),
                    original_response.metadata.get("context_data", {})
                )
                
                if not validation_result[0]:
                    raise ValueError(f"Customization validation failed: {validation_result[1]}")
                
                # Update response with customizations
                customized_response = Response(
                    response_id=response_id,
                    content=customized_content,
                    tone=original_response.tone,
                    confidence_score=validation_result[2].get("confidence", 0.0),
                    metadata={
                        **original_response.metadata,
                        "customization_params": customization_params,
                        "preserved_context": preserve_context,
                        "validation_metrics": validation_result[2]
                    }
                )
                
                logger.info(f"Customized response {response_id} with preserved context: {preserve_context}")
                return customized_response

            except Exception as e:
                logger.error(f"Error customizing response: {str(e)}")
                raise

    async def validate_response(
        self,
        response: Response,
        validation_context: Dict[str, Any]
    ) -> Tuple[bool, str, Dict[str, Any]]:
        """
        Perform comprehensive response validation with learning feedback.

        Args:
            response: Response to validate
            validation_context: Context for validation

        Returns:
            Tuple containing validation status, message, and metrics
        """
        try:
            validation_metrics = {}
            
            # Validate content structure
            content_validation = response.validate_content()
            validation_metrics["content_structure"] = content_validation
            
            # Validate tone consistency
            tone_metrics = await self._ai_processor.calculate_confidence_score(
                response.content,
                validation_context,
                response.tone.name.lower()
            )
            validation_metrics["tone_consistency"] = tone_metrics
            
            # Check confidence threshold
            if tone_metrics["aggregate_score"] < self._config["min_confidence"]:
                return False, "Confidence score below threshold", validation_metrics
            
            # Validate business rules
            business_rules_valid = await self._validate_business_rules(
                response,
                validation_context
            )
            validation_metrics["business_rules"] = business_rules_valid
            
            # Process learning feedback
            if self._request_counter["total"] % self._config["learning_interval"] == 0:
                await self._process_learning_feedback(validation_metrics)
            
            is_valid = all([
                content_validation.get("structure_check") == "passed",
                tone_metrics["aggregate_score"] >= self._config["min_confidence"],
                business_rules_valid
            ])
            
            return is_valid, "Validation successful" if is_valid else "Validation failed", validation_metrics

        except Exception as e:
            logger.error(f"Error during response validation: {str(e)}")
            return False, f"Validation error: {str(e)}", {}

    async def _apply_preferences(
        self,
        content: str,
        preferences: Dict[str, Any]
    ) -> str:
        """Apply user preferences to response content."""
        # Implementation of preference application
        return content

    async def _validate_business_rules(
        self,
        response: Response,
        context: Dict[str, Any]
    ) -> bool:
        """Validate response against business rules."""
        # Implementation of business rules validation
        return True

    async def _update_learning_metrics(
        self,
        response: Response,
        validation_metrics: Dict[str, Any]
    ) -> None:
        """Update learning metrics based on response generation and validation."""
        # Implementation of learning metrics update
        pass

    async def _process_learning_feedback(
        self,
        validation_metrics: Dict[str, Any]
    ) -> None:
        """Process accumulated learning feedback to improve generation."""
        # Implementation of learning feedback processing
        pass